# app/Http/Controllers/API/BranchAPIController.php
@@ -1,0 +1,255 @@
+<?php
+
+namespace App\Http\Controllers\API;
+
+use App\Http\Requests\API\CreateBranchAPIRequest;
+use App\Http\Requests\API\UpdateBranchAPIRequest;
+use App\Models\Branch;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use App\Http\Controllers\AppBaseController;
+
+/**
+ * Class BranchController
+ */
+
+class BranchAPIController extends AppBaseController
+{
+    /**
+     * @OA\Get(
+     *      path="/branches",
+     *      summary="getBranchList",
+     *      tags={"Branch"},
+     *      description="Get all Branches",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="array",
+     *                  @OA\Items(ref="#/components/schemas/Branch")
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function index(Request $request): JsonResponse
+    {
+        $query = Branch::query();
+
+        if ($request->get('skip')) {
+            $query->skip($request->get('skip'));
+        }
+        if ($request->get('limit')) {
+            $query->limit($request->get('limit'));
+        }
+
+        $branches = $query->get();
+
+        return $this->sendResponse($branches->toArray(), 'Branches retrieved successfully');
+    }
+
+    /**
+     * @OA\Post(
+     *      path="/branches",
+     *      summary="createBranch",
+     *      tags={"Branch"},
+     *      description="Create Branch",
+     *      @OA\RequestBody(
+     *        required=true,
+     *        @OA\JsonContent(ref="#/components/schemas/Branch")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Branch"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function store(CreateBranchAPIRequest $request): JsonResponse
+    {
+        $input = $request->all();
+
+        /** @var Branch $branch */
+        $branch = Branch::create($input);
+
+        return $this->sendResponse($branch->toArray(), 'Branch saved successfully');
+    }
+
+    /**
+     * @OA\Get(
+     *      path="/branches/{id}",
+     *      summary="getBranchItem",
+     *      tags={"Branch"},
+     *      description="Get Branch",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Branch",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Branch"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function show($id): JsonResponse
+    {
+        /** @var Branch $branch */
+        $branch = Branch::find($id);
+
+        if (empty($branch)) {
+            return $this->sendError('Branch not found');
+        }
+
+        return $this->sendResponse($branch->toArray(), 'Branch retrieved successfully');
+    }
+
+    /**
+     * @OA\Put(
+     *      path="/branches/{id}",
+     *      summary="updateBranch",
+     *      tags={"Branch"},
+     *      description="Update Branch",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Branch",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\RequestBody(
+     *        required=true,
+     *        @OA\JsonContent(ref="#/components/schemas/Branch")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  ref="#/components/schemas/Branch"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function update($id, UpdateBranchAPIRequest $request): JsonResponse
+    {
+        /** @var Branch $branch */
+        $branch = Branch::find($id);
+
+        if (empty($branch)) {
+            return $this->sendError('Branch not found');
+        }
+
+        $branch->fill($request->all());
+        $branch->save();
+
+        return $this->sendResponse($branch->toArray(), 'Branch updated successfully');
+    }
+
+    /**
+     * @OA\Delete(
+     *      path="/branches/{id}",
+     *      summary="deleteBranch",
+     *      tags={"Branch"},
+     *      description="Delete Branch",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="id of Branch",
+     *           @OA\Schema(
+     *             type="integer"
+     *          ),
+     *          required=true,
+     *          in="path"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="success",
+     *                  type="boolean"
+     *              ),
+     *              @OA\Property(
+     *                  property="data",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="message",
+     *                  type="string"
+     *              )
+     *          )
+     *      )
+     * )
+     */
+    public function destroy($id): JsonResponse
+    {
+        /** @var Branch $branch */
+        $branch = Branch::find($id);
+
+        if (empty($branch)) {
+            return $this->sendError('Branch not found');
+        }
+
+        $branch->delete();
+
+        return $this->sendSuccess('Branch deleted successfully');
+    }
+}
